--- a/react-with-vite/package.json
+++ b/react-with-vite/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "server.jsx"
   },
   "dependencies": {
     "node-sass": "^9.0.0",
@@ -23,7 +24,9 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "express": "^4.21.2",
     "globals": "^15.15.0",
+    "nodemon": "^3.1.9",
     "sass-embedded": "^1.85.1",
     "vite": "^6.2.0"
   }
