--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "react-with-vite",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
+    "start": "react-scripts start",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npm-run-all --parallel server startReact",
-    "server": "nodemon src/server/server.js",
-    "startReact": "react-scripts start"
+    "server": "nodemon server/server.js"
   },
   "dependencies": {
-    "node-sass": "^9.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0",
-    "react-scripts": "^5.0.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.7",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "express": "^4.21.2",
     "globals": "^15.15.0",
-    "nodemon": "^3.1.9",
-    "npm-run-all": "^4.1.5",
-    "sass-embedded": "^1.85.1",
     "vite": "^6.2.0"
   }
 }
